src/assets/styles/styles.css
/* ... */
/* Navigation */

.navbar {
  padding: 0;
}

.brand {
  min-height: 3rem;
}

.navbar-desktop {
  display: none;
  visibility: hidden;
}

.aria-skip-link:not(:focus) {
  position: absolute;
  left: -999px;
  top: -999px;
  width: 0;
  height: 0;
  margin: 0;
  padding: 0;
}

.aria-skip-link {
  margin-top: 1rem;
  padding: 0;
}

a.aria-skip-link,
.footer a {
  color: hsl(218, 100%, 75%);
}

a.aria-skip-link:hover,
.footer a:hover {
  color: hsl(50, 100%, 50%);
}

a.aria-skip-link:visited,
.footer a:visited {
  color: hsl(277, 85%, 65%);
}

.navbar-mobile {
  border-bottom: .5rem solid hsl(0, 91%, 48%);
}

.navbar-brand {
  font-weight: 900;
  letter-spacing: 1px;
}

.navbar-brand,
.navbar-brand:hover,
.navbar-brand:focus,
.navbar-brand:visited,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:visited,
.footer .footer-brand,
.footer .footer-brand:hover,
.footer .footer-brand:focus,
.footer .footer-brand:visited {
  color: white;
}

.navbar-dark :focus,
.footer :focus {
  outline-color: hsl(50, 100%, 50%);
}

.nav-container {
  width: 100%;
  min-height: .5rem;
  background-color: hsl(0, 91%, 48%);
}

.navbar-desktop .navbar-nav {
  padding: 0 3rem;
}

.navbar-mobile .navbar-brand {
  width: 50%;
  margin: 0;
  white-space: normal;
}

.navbar-mobile .navbar-nav {
  text-align: center;
}

.navbar-dark .navbar-toggler {
  border: none;
}

.navbar-dark .navbar-toggler:focus {
  outline-style: solid;
  outline-width: 4px;
}

.navbar-dark .navbar-toggler:hover:focus {
  outline: 0;
}

.navbar-dark .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1.0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.nav-item {
  list-style: none;
}

.navbar-nav .nav-link {
  height: 3rem;
  padding: 1rem;
  line-height: 1;
  font-size: 1rem;
  font-weight: 900;
  letter-spacing: 1px;
}

.navbar-dark .navbar-nav .nav-link,
.navbar-dark .navbar-nav .nav-item:hover .nav-link {
  color: white;
}

.nav-link:hover {
  background-color: hsl(50, 100%, 50%);
}

.navbar-dark .navbar-nav .nav-link:hover,
.nav-pills .nav-link.active,
.nav-pills .nav-link.active:hover {
  letter-spacing: 1px;
  text-shadow:
    /* base */
    -1px -1px 1px black,
    0px 0px 1px black,
    1px 1px 1px black,

    /* right offset */
    1px -1px 1px black,
    2px 0px 1px black,
    3px 1px 1px black,

    /* bottom offset */
    -1px 1px 1px black,
    0px 2px 1px black,
    1px 3px 1px black,

    /* round out the corners */
    3px 3px 1px black;
}

@media (min-width: 576px) {

}

@media (min-width: 768px) {
  .brand {
    min-height: 5rem;
  }

  .navbar-desktop {
    display: block;
    visibility: visible;
  }

  .navbar-mobile {
    display: none !important;
    visibility: hidden;
  }

  .navbar-nav {
    flex-direction: row;
  }

  .navbar-brand {
    font-size: 2rem;
  }
}

@media (min-width: 992px) {}

@media (min-width: 1200px) {}

/* Page Content */

#main {
  background-color: white;
  min-height: 10rem;
}

.ssbu-module {
  padding-bottom: 1rem;
}

.page-title {
  color: white;
  text-shadow:
    /* base */
    -2px -2px 0px black,
    -1px -1px 1px black,
    0px 0px 1px black,
    1px 1px 1px black,
    2px 2px 1px black,
    3px 3px 0px black,

    /* right offset */
    0px -2px 0px black,
    1px -1px 1px black,
    2px 0px 1px black,
    3px 1px 1px black,
    4px 2px 0px black,

    /* right offset - correction */
    1px -2px 0px black,
    2px -1px 1px black,
    3px 0px 1px black,
    4px 1px 1px black,
    5px 2px 0px black,

    /* bottom offset */
    -2px 0px 0px black,
    -1px 1px 1px black,
    0px 2px 1px black,
    1px 3px 1px black,
    2px 4px 0px black,

    /* round out the corners */
    -2px -1px 1px black,
    5px 4px 0px black
}

.ssbu-module > section {
  margin-bottom: 2rem;
}

/* Content */

/* Content - Alerts */
.alert {
  margin-top: 1rem;
  margin-bottom: 0;
}

/* Content - Badges */
.badge {
  margin-bottom: .25em;
  vertical-align: middle;
  font-size: 85%;
}

/* Content - Navs */
.row.nav-pills {
  margin-bottom: 1rem;
}

.row.nav-pills .nav-item {
  margin-bottom: 1rem;
}

.nav-pills .nav-link {
  width: 100%;
  min-height: 2.5rem;
  padding: .75rem;
  border-width: 0;
  border-radius: 6px;
  text-align: center;
  line-height: 1;
  font-weight: 900;
  background-color: hsl(196, 12%, 75%);
  color: hsl(196, 12%, 10%);
  cursor: pointer;
}

.nav-pills .nav-link.active,
.nav-pills .nav-link.active:hover {
  background-color: hsl(50, 100%, 50%);
  color: white;
  border: none;
  box-shadow:
    /* base */
    -2px -2px 1px hsl(196, 12%, 10%),
    -1px -1px 1px hsl(196, 12%, 10%),
    0px 0px 1px hsl(196, 12%, 10%),
    1px 1px 1px hsl(196, 12%, 10%),
    2px 2px 1px hsl(196, 12%, 10%),
    3px 3px 1px hsl(196, 12%, 10%),
    
    /* right offset */
    0px -2px 1px hsl(196, 12%, 10%),
    1px -1px 1px hsl(196, 12%, 10%),
    2px 0px 1px hsl(196, 12%, 10%),
    3px 1px 1px hsl(196, 12%, 10%),
    4px 2px 1px hsl(196, 12%, 10%),

    /* right offset - correction */
    1px -2px 1px hsl(196, 12%, 10%),
    2px -1px 1px hsl(196, 12%, 10%),
    3px 0px 1px hsl(196, 12%, 10%),
    4px 1px 1px hsl(196, 12%, 10%),

    /* bottom offset */
    -2px 0px 1px hsl(196, 12%, 10%),
    -1px 1px 1px hsl(196, 12%, 10%),
    0px 2px 1px hsl(196, 12%, 10%),
    1px 3px 1px hsl(196, 12%, 10%),
    2px 4px 1px hsl(196, 12%, 10%);
}

.nav-pills .nav-link:hover {
  /*background-color: hsl(196, 12%, 17%);
  color: white;*/
  background-color: hsl(50, 100%, 50%);
  color: hsl(196, 12%, 10%);
}

.nav-pills .nav-link:focus {
  outline-offset: 2px;
  outline-color: hsl(196, 12%, 10%);
}

.nav-pills .nav-link.active:focus {
  outline-offset: 6px;
}

/* Content - Buttons */
.btn {
  border-radius: 6px;
  transition: none;
}
/* ... */

